--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,21 @@
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="stylesheet" href="./src/index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReadioHead</title>
   </head>
   <body>
+    <video
+      class="video-bg"
+      autoplay
+      muted
+      loop
+      playsinline
+    >
+      <source src="/livebg.mp4" type="video/mp4" />
+    </video>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
